--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ license = "GPLv3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-telnetlib3 = "^1.0.3"
+python = "^3.11.1"
+telnetlib3 = "^2.0.4"
 asyncio = "^3.4.3"
 rich = "^9.9.0"
+expiringdict = "^1.2.2"
+timeago = "^1.0.16"
 
 [tool.poetry.dev-dependencies]
 
