--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncio = "^3.4.3"
 rich = "^9.9.0"
 expiringdict = "^1.2.2"
 timeago = "^1.0.16"
+qrzlib = "^0.3.0"
 
 [tool.poetry.dev-dependencies]
 
